--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,80 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             android:fontFamily="@font/roboto" style="@style/whiteBox" android:id="@+id/Parking_Lot"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/space_one"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:id="@+id/space_one" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/Parking_Lot" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" style="@style/whiteBox" android:textSize="12sp"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView2"
+            android:textColor="#F3FF0000"/>
+    <TextView
+            android:text="@string/space_two"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:id="@+id/textView2" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/Parking_Lot" app:layout_constraintStart_toEndOf="@+id/space_one"
+            android:layout_marginStart="16dp" style="@style/whiteBox" android:textSize="12sp"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView3"
+            android:textColor="#E8B300FF"/>
+    <TextView
+            android:text="@string/space_three"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:id="@+id/textView3" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/Parking_Lot" app:layout_constraintStart_toEndOf="@+id/textView2"
+            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp" style="@style/whiteBox" android:textSize="12sp"
+            app:layout_constraintHorizontal_bias="0.5"/>
+    <EditText
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="74dp"
-            tools:layout_editor_absoluteX="45dp" android:id="@+id/textView"/>
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="@string/license_plate"
+            android:ems="10"
+            android:id="@+id/license_plate" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/space_one" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/editText2"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="@string/brand"
+            android:ems="10"
+            android:id="@+id/editText2" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/license_plate" android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/editText3"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="@string/name"
+            android:ems="10"
+            android:id="@+id/editText3" android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText2"
+            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/button"/>
+    <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
