--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,99 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Parking_Lot"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="@dimen/margin_wide"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            android:fontFamily="@font/roboto" style="@style/whiteBox" android:id="@+id/Parking_Lot"/>
-    <TextView
-            android:text="@string/space_one"
-            android:layout_width="80dp"
-            android:layout_height="50dp"
-            android:id="@+id/space_one" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/Parking_Lot" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" style="@style/whiteBox" android:textSize="12sp"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView2"
-            android:textColor="#F3FF0000"/>
-    <TextView
-            android:text="@string/space_two"
-            android:layout_width="80dp"
-            android:layout_height="50dp"
-            android:id="@+id/textView2" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/Parking_Lot" app:layout_constraintStart_toEndOf="@+id/space_one"
-            android:layout_marginStart="16dp" style="@style/whiteBox" android:textSize="12sp"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView3"
-            android:textColor="#E8B300FF"/>
-    <TextView
-            android:text="@string/space_three"
-            android:layout_width="80dp"
-            android:layout_height="50dp"
-            android:id="@+id/textView3" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/Parking_Lot" app:layout_constraintStart_toEndOf="@+id/textView2"
-            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" style="@style/whiteBox" android:textSize="12sp"
-            app:layout_constraintHorizontal_bias="0.5"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/license_plate" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/space_one" android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/editText2"
-            android:hint="@string/license_plate"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/editText2" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/license_plate" android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/editText3"
-            android:hint="@string/brand"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/editText3" android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText2"
-            app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/update"
-            android:hint="@string/your_name"/>
-    <Button
-            android:text="@string/update"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/update" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textColor="#02467A"
-            android:background="#AAE96C"/>
-    <Button
-            android:text="@string/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/delete"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textColor="#FF0000"
-            android:background="#CDDC39"/>
+    <data>
+        <variable name="space" type="buu.informatics.s59160620.carparking.Space"/>
+        <variable name="space2" type="buu.informatics.s59160620.carparking.Space2"/>
+        <variable name="space3" type="buu.informatics.s59160620.carparking.Space3"/>
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/Parking_Lot"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="@dimen/margin_wide"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+                android:fontFamily="@font/roboto" style="@style/whiteBox" android:id="@+id/Parking_Lot"/>
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/license_plate"
+                android:hint="@string/license_plate"
+                android:layout_marginTop="60dp"
+                app:layout_constraintTop_toBottomOf="@+id/btn_one" android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/barnd"
+                android:hint="@string/brand" android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/license_plate" android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"/>
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/name"
+                android:hint="@string/your_name"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/barnd" android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.01999998"
+                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+                android:text="@string/update"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/update" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textColor="#02467A"
+                android:background="#AAE96C"/>
+        <Button
+                android:text="@string/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/delete"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textColor="#FF0000"
+                android:background="#CDDC39"/>
+        <Button
+                android:text="@string/space_one"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/btn_one"
+                app:layout_constraintBaseline_toBaselineOf="@+id/btn_two" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"/>
+        <Button
+                android:text="@string/space_two"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/btn_two"
+                app:layout_constraintTop_toBottomOf="@+id/Parking_Lot" android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.09"
+                app:layout_constraintEnd_toStartOf="@+id/btn_three" android:layout_marginEnd="16dp"
+                app:layout_constraintStart_toEndOf="@+id/btn_one" android:layout_marginStart="16dp"/>
+        <Button
+                android:text="@string/space_three"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/btn_three"
+                app:layout_constraintBaseline_toBaselineOf="@+id/btn_two" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="32dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
